developerProject/force-app/main/default/objects/OJSERLIB__DocuSign_Envelop__c/OJSERLIB__DocuSign_Envelop__c.object-meta.xml
<CustomObject>
    <label>DocuSign Envelop</label>
    <nameField>
        <label>DocuSign Envelop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>