developerProject/force-app/main/default/objects/OJSERLIB__DocuSign_Envelop__c/fields/OJSERLIB__Attachment_ObjectId__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Attachment_ObjectId__c</fullName>
    <label>Attachment ObjectId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>