developerProject/force-app/main/default/objects/OJSERLIB__DocuSign_Envelop__c/fields/OJSERLIB__EnvelopId__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__EnvelopId__c</fullName>
    <label>EnvelopId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>