developerProject/force-app/main/default/objects/OJSERLIB__DocuSign_Envelop__c/fields/OJSERLIB__Status__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>