developerProject/force-app/main/default/objects/OJSERLIB__DocuSign_Envelop__c/fields/OJSERLIB__Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>