developerProject/force-app/main/default/objects/OJSERLIB__DocuSign_Envelop__c/listViews/OJSERLIB__All.listView-meta.xml
<ListView>
    <fullName>OJSERLIB__All</fullName>
    <columns>OJSERLIB__EnvelopId__c</columns>
    <columns>OJSERLIB__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>